# spdcalc

./: .buildinfo  .editorconfig  .gitignore  .rustfmt.toml  2013-10-26 3GaussPumpTypeINoWalkoffPhi0Unixaial.nb  2013-11-12 Working out coefficients in front of exponetial.nb  3GaussPumpWalkoff.nb  Cargo.toml  Karina Krister Edits errors.nb  PMlib.js  README.md  _SpecRunner.html  conditional.enaml  config.rb  dest  fields.enaml  figure_11.html  genindex.html  getting_started.html  gruntfile.js  index.html  jshint.json  looper.enaml  notebook_pages.enaml  objects.inv  package.json  py-modindex.html  search.html  searchindex.js  webpack.config.js  what_is_spdcalc.html
.cargo/: config  config.bak
.doctrees/: environment.pickle  getting_started.doctree  index.doctree  what_is_spdcalc.doctree
.zed/: settings.json
AlfredHeraldingEfficiencyCode/: Aux2.m  DK.m  HeraldingEfficiency.m  IndxRefr_y.m  IndxRefr_z.m  Int_Rc_prx.m  SchmidtK.m  auxintRc.m  intkPM_Ns.m  k_y.m  k_z.m  polingPer.m
BB0_TypeI_16deg/: FC_JSA.m  FC_singleRate.m  HerealdingEfficiency.m  Int_Rc_prx.m  auxintRc.m  indxExAng_BBO.m  indxEx_BBO.m  indxOr_BBO.m  intkPM_Ns.m
Generalized_BBO_TypeI_16deg/: FC_JSA.m  HeraldingEfficiency.m  Int_Rc_prx.m  SchmidtK.m  SingleRate_idler.m  SingleRate_signal.m  auxint.m  auxintRc.m  thcut.m  walkoff.m
Mathematica/: 2013-10-13 3Gauss pump walkoff.nb  2013-10-24 3GaussPumpTypeINoWalkoffPhi0Unixaial.nb  2013-10-29 3GaussPumpTypeIWalkoffPhi0Unixaial.nb  2013-11-01 Calculation for U'Ren.nb  2013-11-01 Investigate collinear with varying waist.nb  2013-11-01 Investigate noncollinear with varying waist.nb  2013-11-02 Attempt to solve Hermite Gauss modes for idler.nb  3GaussNoWalkoff.nb  3GaussPumpWalkoffUnixaial.nb  3GaussPumpWalkoffUnixaialUseQ.nb  Karina Krister Edits.nb  Krister Edits.nb  biaxial integral.nb  lhfsagnacwalkoffcalculations.nb
_backup/: pm-plothelpers.js.orig
_modules/: index.html
_scratchwork/: TODO.md  new-api.md  plotting.rs  props.rs  wishlist_usage.md
_sources/: index.rst.txt
api/: index.html  jsa.html  phasematch.html  plotting.html  spdcalc.html
benches/: crystals.rs  dev.rs  heralding.rs  hom.rs  math.rs  plot.rs  spd.rs
browser/: CNAME  index.html  plot.html  plot.js  plotdelk.html  plotdelk.js  spdcalc.js  test-worker.html  test-worker.js  test.html  test.js  tmp.css
config/: jshint.json  webpack-pm-dev.config.js  webpack-pm.config.js  webpack-spdcalc.config.js  webpack-ui-dev.config.js
examples/: Basic JSI.html  basic_jsi.html  count_rate_vs_fiber_theta.html  count_rate_vs_fiber_theta.py.html  counter_propagation.rs  hom.rs  index.html  minimal_debug.html  minimal_debug.ipynb  phasematching_for_crystal_angle.html  working_with_yaml.html  (+1 more)
python/: Cargo.toml  LICENSE.txt  Makefile.toml  Pipfile  README.md  dev_test.py  noras_file_explanations.txt  pyproject.toml  resources.txt  test.py
python/docs/: conf.py  deploy.sh  getting_started.rst  index.rst  what_is_spdcalc.rst
python/docs/_build/doctrees/: environment.pickle  index.doctree
python/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
python/docs/_build/html/_sources/: index.rst.txt
python/docs/api/: index.rst  jsa.rst  phasematch.rst  plotting.rst  spdcalc.rst
python/docs/examples/: 2_source_HOM.ipynb  Basic JSI.ipynb  api_v2.py  count_rate_vs_fiber_theta.ipynb  count_rate_vs_fiber_theta.py.ipynb  heralding_efficiency_Bennink.ipynb  heralding_efficiency_Bennink_new.ipynb  index.rst  jsi_graph.ipynb  minimal_debug.ipynb  my_setup.yaml  refIndex_graph.ipynb  schmidt_number.ipynb  schmidt_number_new.ipynb
python/docs/examples/.ipynb_checkpoints/: Basic JSI-checkpoint.ipynb
python/docs/examples/api_v2_documentation/doctrees/: environment.pickle  index.doctree
python/docs/examples/api_v2_documentation/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
python/docs/examples/api_v2_documentation/html/_sources/: index.rst.txt
python/docs/examples/iframe_figures/: figure_7.html
python/docs/guide/: index.rst
python/examples/: 2_source_HOM.py  count_rate_vs_fiber_theta.py  jsi.py  jsi_for_crystal_angle.py  spdc_setup.yaml  spdcalc_Bennink.py  spdcalc_jsi_test.py  working_with_yaml.py
python/examples/spdc_graph_recreations/: jsi_graph.py  periodic_poling_test.py  refIndex_graph.py  spdc_HOM_test.py  spdcalc_count_fiber_theta_test.py  spdcalc_heralding_waist_test.py  spdcalc_jsi_test.py
python/src/: api_v2.py  conversions.rs  exceptions.rs  jsa.rs  lib.rs  phasematch.rs  utils.rs
python/src/crystal/: crystal_setup.rs  mod.rs
python/src/photon/: mod.rs
python/src/plotting/: mod.rs
python/src/spdc_setup/: from_dict.rs  mod.rs
python/test/: Dockerfile
spdcalc/: Cargo.toml  Makefile.toml
spdcalc/benches/: crystals.rs  dev.rs  math.rs  plot.rs  spd.rs
spdcalc/src/: constants.rs  lib.rs  types.rs  utils.rs
spdcalc/src/crystal/: aggas2_1.rs  aggase2_1.rs  aggase2_2.rs  bbo_1.rs  bibo_1.rs  crystal.rs  crystal_setup.rs  kdp_1.rs  ktp.rs  liio3_1.rs  liio3_2.rs  lilo3_1.rs  linb_mgo.rs  linbo3_1.rs  meta.rs  mod.rs  sellmeier.rs
spdcalc/src/crystal/sellmeier/: mod.rs
spdcalc/src/crystal/sellmeier/equations/: mod.rs  standard.rs
spdcalc/src/crystal/sellmeier/temperature_dependence/: mod.rs  none.rs  standard.rs
spdcalc/src/crystals/: bbo_1.rs  bibo_1.rs  ktp.rs  meta.rs  mod.rs  point_group.rs
spdcalc/src/junk/: mod.rs
spdcalc/src/math/: differentiation.rs  integration.rs  mod.rs  nelder_mead.rs
spdcalc/src/photon/: mod.rs
spdcalc/src/plotting/: heralding.rs  hom.rs  jsi.rs  mod.rs
spdcalc/src/spd/: autocalc.rs  coincidences.rs  computations.rs  mod.rs  periodic_poling.rs  plotting.rs
spdcalc/src/spd/phasematch/: coincidences.rs  mod.rs  singles.rs
wasm/: .gitignore  Cargo.toml  README.md  justfile  spdcalc.wai
wasm/js/: index.mjs
wasm/py/: README.md  basic-example.py  pyproject-template.toml  settings.yaml  spdc.json  test.py
wasm/src/: config.rs  conversion.rs  lib.rs
wasm/wapm/: README.md  spdcalc.wai  spdcalc.wasm  wapm.toml
(+131 files in other folders)
