[package]
name = "spdcalc"
version = "0.1.1"
authors = ["Jasper Palfree <jasper.palfree@colorado.edu>", "Krister Shalm <lynden.shalm@nist.gov>"]
edition = "2021"
description="SPDCalc, the Spontaneous Parametric Downconversion Calculator"
keywords = ["physics", "spdc", "photonics"]
license="MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
# num = "0.3"
# nalgebra = "0.18"
# dimensioned = "0.7"
# argmin = "0.7"
# ndarray = "0.11"
# serde = "^1.0.59"
# serde_derive = "^1.0.59"

num = "0.4"
nalgebra = "0.31"
dimensioned = "0.8"
# nelder_mead = { git = "https://github.com/JD557/nelder-mead.rs" }
# optimize = "0.1" # ... needs ndarray 0.11
argmin = "0.7"
ndarray = "0.15"
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "2.3"
regex = "1.7"
lazy_static = "1.4"

# [features]
# wasm-bindgen = ["argmin/wasm-bindgen"]

[dev-dependencies]
criterion = "0.2"
float-cmp = "0.5"
serde_json = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

# Benchmarks
[[bench]]
name = "plot"
harness = false

[[bench]]
name = "crystals"
harness = false

[[bench]]
name = "spd"
harness = false

[[bench]]
name = "math"
harness = false

[[bench]]
name = "dev"
harness = false
