[package]
name = "spdcalc"
version = "0.1.2"
authors = [
    "Jasper Palfree <jasper.palfree@colorado.edu>",
    "Krister Shalm <lynden.shalm@nist.gov>",
]
edition = "2021"
description = "SPDCalc, the Spontaneous Parametric Downconversion Calculator"
keywords = ["physics", "spdc", "photonics"]
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
num = "0.4"
roots = "0.0.8"
nalgebra = "0.33"
dimensioned = { version = "0.8", features = ["serde"] }
# nelder_mead = { git = "https://github.com/JD557/nelder-mead.rs" }
# optimize = "0.1" # ... needs ndarray 0.11
argmin = { version = "0.10", default-features = false }
ndarray = "0.15"
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "3.8"
serde_json = "1.0"
regex = "1.7"
lazy_static = "1.4"
quad-rs = { git = "https://github.com/wellcaffeinated/quad-rs", rev = "9d3d8618e39c499d92786d62af75804387af183a" }
# rustfft = "6.2"
quadrature = "0.1"
gauss-quad = "0.2"
strum = "0.26"
strum_macros = "0.26"
pyo3 = { version = "0.22.2", features = ["num-complex"], optional = true }
meval = { version = "0.2", features = ["serde"] }
deser-hjson = "2.2"
rayon = "1.10"

[features]
default = []
wasm-bindgen = ["argmin/wasm-bindgen"]
pyo3 = ["dep:pyo3"]
elliptic = []

[dev-dependencies]
criterion = "0.5"
float-cmp = "0.9"
serde_json = "1.0"
textplots = "0.8"

[profile.release]
opt-level = 3

# Benchmarks

[[bench]]
name = "crystals"
harness = false

[[bench]]
name = "heralding"
harness = false

[[bench]]
name = "hom"
harness = false
