[package]
name = "pyspdcalc"
version = "0.1.0"
authors = ["Jasper <jasper.palfree@colorado.edu>"]
edition = "2018"

[lib]
name = "pyspdcalc"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module", "num-complex"]

[dependencies.spdcalc]
path = '../'
version = "0.1"
