[package]
name = "pyspdcalc"
version = "0.1.0"
authors = ["Jasper Palfree <jasper.palfree@colorado.edu>", "Krister Shalm <lynden.shalm@nist.gov>"]
edition = "2018"
description="Python bindings for SPDCalc, the Spontaneous Parametric Downconversion Calculator"
readme="README.md"
keywords = ["physics", "spdc", "photonics"]
license="MIT"

# [package.metadata.maturin]

[lib]
name = "pyspdcalc"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module", "num-complex"]

[dependencies.spdcalc]
path = '../'
version = "0.1"

[package.metadata.sphinx]
docs-path = "docs"
commit-message = "(cargo-sphinx) Generate docs."
sign-commit = false
push-remote = "origin"
push-branch = "gh-pages"
