[package]
name = "spdcalc"
version = "0.1.0"
authors = ["Jasper <jasper.palfree@colorado.edu>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
num = "0.2"
nalgebra = "0.18"
dimensioned = "0.7"
nelder_mead = { git = "https://github.com/JD557/nelder-mead.rs" }
# serde = "1.0"
# argmin = "0.2"

[dev-dependencies]
criterion = "0.2"
float-cmp = "0.5"

[[bench]]
name = "crystals"
harness = false

[[bench]]
name = "dev"
harness = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
