[package]
name = "spdcalc"
description = "WASM package of SPDCalc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wai-bindgen-rust = "0.2.3"
spdcalc = { path = "../" }
serde_json = "1.0"
# getrandom = { version = "0.2", features = ["js"] }
# getrandom = { features = ["custom"] }

[package.metadata.wapm]
namespace = "wellcaffeinated"  # Replace this with your WAPM username
abi = "wasi"
# bindings = { wit-bindgen = "0.2.0", wit-exports = "spdcalc.wai" }
bindings = { wai-version = "0.2.3", exports = "spdcalc.wai" }

